# PDFMathTranslate-desktop

./: .gitignore  Mathematical_Semantic_Philosophy.md  README.md  generate_icon.py  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: translate_stream.py
scripts/tests/: test_translate_stream.py
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: env_manager.rs  lib.rs  main.rs
src/components/: FileTree.tsx  PdfCanvasView.tsx  TaskPanel.tsx
