[package]
name = "pdf2zh_desktop"
version = "0.1.0"
description = "Desktop PDF translator based on pdf2zh_next"
authors = ["math173sr"]
edition = "2021"

[lib]
name = "pdf2zh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
walkdir = "2.5"
tokio = { version = "1.48", features = ["process", "io-util", "sync", "rt-multi-thread", "macros"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2.2"
futures-util = "0.3"
tempfile = "3.13"
flate2 = "1.0"
tar = "0.4"

regex = "1.11"
